tests/errors/parser-errors/block/double_comma.smark
[Block k:v,, k2:v2]
